# Anti-ACE

./: .gitignore  Anti-ACE.spec  INFO_AFTER_INSTALL.rtf  INFO_BEFORE_INSTALL.rtf  LICENSE  LICENSE.rtf  README.md  main.py  pyproject.toml  version_info.txt
antiace/: __init__.py  __main__.py  app.py  cli.py  config.py  gui.py  optimizer.py  picker.py  processes.py  resources.py  tray.py  wegame.py  windows.py
scripts/: build.ps1
