[project]
name = "antiace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "FoLAWy" },
]

[project.urls]
Homepage = "https://www.witsqua.com"
dependencies = [
    "psutil>=7.2.2",
    "pystray>=0.19.5",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
antiace = "antiace.__main__:main"
